tdf#162194 sw: Fix for auto-hyphens inside ligatures

Fixes an issue causing Writer to print ligature glyphs in front of
automatic hyphens, instead of breaking ligatures at the hyphen insertion
point.

Regression from commit ab0a4543cab77ae0c7c0a79feb8aebab71163dd7
(tdf#124116 Correct Writer text shaping across formatting changes)

Change-Id: I7d6fbfdc892cce0c50552629f520deedc5304c65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171245
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 142ce290a2a29f9794ba9a689f35d6f7e3ff588c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171198
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171309
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>