sw/source/core/text/itrform2.cxx
@@ -1466,6 +1466,7 @@ SwTextPortion *SwTextFormatter::NewTextPortion( SwTextFormatInfo &rInf )
                 case CH_TXT_ATR_FIELDSTART:
                 case CH_TXT_ATR_FIELDSEP:
                 case CH_TXT_ATR_FIELDEND:
+                case CHAR_SOFTHYPHEN:
                     bAtEnd = true;
                     break;
 
